--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: arulesSequences
+Package: arulesSequencesForkedCustom
 Version: 0.2-25
 Title: Mining Frequent Sequences
 Author: Christian Buchta and Michael Hahsler, with contributions from
@@ -16,6 +16,6 @@ Date/Publication: 2020-05-17 07:46:01 UTC
 Imports: 
     arules,
     methods, 
-    utils
-
-
+    utils, 
+    readr
+RoxygenNote: 7.1.2
